--- a/dangerzone/templates/movie_list.html
+++ b/dangerzone/templates/movie_list.html
@@ -2,7 +2,7 @@
 
 {% block content_title %}Movies{% endblock %}
 
-{% block rum_content %}
+{% block content %}
   <ul>
     {% for person in user_list %}
       <li><a href="{{ url_for('movie', movie=Movie.title) }}">{{ Movie.title }}</a></li>
